# pro-analytics-02

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  ANNOTATIONS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SE_MANIFEST.toml  mkdocs.yml  pyproject.toml  rel.ps1  ruff.strict.toml  shape.ps1  zensical.toml
.accountability/: surfaces.toml
.github/: CODEOWNERS  lychee.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  links.yml
docs/: index.md  problem-types.md  py-packages-core.md  py-packages.md  py-standard-library.md
docs/01-set-up-machine/: 01-create-github-account.md  02-view-hidden-files-and-extensions.md  03a-linux-install-tools.md  03b-mac-install-tools.md  03c-windows-install-tools.md  04-configure-git.md  05-create-repos-folder.md  06-verify.md  index.md
docs/02-set-up-project/: 01-start-in-github.md  02-configure-repo-settings.md  02-enable-github-pages.md  03-clone-repo-to-local.md  04-install-vscode-extensions.md  04-open-vscode-extensions.md  05-set-up-environment.md  05-set-up-virtual-environment.md  06-git-add-commit-push.md  07-update-project-files.md  index.md
docs/03-daily-workflow/: 01-git-pull-before-changes.md  02-run-and-check.md  02-update-and-check.md  02a-run-python.md  02b-run-notebook.md  03-build-serve-docs.md  04-git-add-commit-push.md  04a-run-python.md  04b-run-notebook.md  05-git-add-commit-push.md  05-update-project-files.md  06-modify-and-debug.md  index.md
docs/04-help/: 01-taking-screenshots.md  02-hosting-video.md  naming-gh-actions.md
docs/05-roadmap/: ROADMAP_LANGUAGES.md  ROADMAP_TECHNIQUES.md  ROADMAP_TOOLS.md
docs/05-terminals/: terminals-shells-envs.md  terminals-shells-mac-linux.md  terminals-shells-windows.md
docs/06-python/: project-mkdocs.md  project-structure.md  python-vscode-tips.md  running-python.md  troubleshooting.md  writing-readme.md
docs/07-github-actions/: 01-ci.md
docs/ai-use-and-governance/: ai-policy-and-regulation.md  ai-power-capability-governance.md
docs/glossary/: data-formats.md  editors.md  git-github.md  project-workflow.md  terminals.md
docs/glossary/python/: environment.md  project-structure.md  python-language.md
docs/help/: 01-taking-screenshots.md  02-hosting-video.md  03-polars-and-older-machines.md
docs/kafka/: create-topic.md  index.md  install-kafka.md  manage-topics.md  many-terminals.md  start-kafka.md  stop-kafka.md  windows-wsl.md
docs/reference/api/: api.md
docs/reference/datasets/: cintel.md  nlp.md
docs/reference/datasets/files/: transit_ridership.csv  web-service-metrics.csv
docs/reference/packaging/: py-packages-core.md  py-packages.md  py-standard-library.md
docs/reference/portfolios/: cintel.md  nlp.md
docs/reference/problem-types/: problem-types.md
docs/reference/project-documentation/: project-docs.md
docs/reference/python/: disk-space.md  project-structure.md  python-file-structure.md  python-vscode-tips.md  running-python.md  standard-library.md  troubleshooting.md  writing-readme.md
docs/spark/: index.md  windows-wsl.md
docs/tools/github-and-ci/: 00-pre-commit.md  01-ci.md
docs/tools/terminals/: terminals-shells-envs.md  terminals-shells-mac-linux.md  terminals-shells-windows.md
docs/workflow-a-set-up-machine/: 01-create-github-account.md  02-view-hidden-files-and-extensions.md  03a-linux-install-tools.md  03b-mac-install-tools.md  03c-windows-install-tools.md  04-configure-git.md  05-create-repos-folder.md  06-verify.md  index.md
docs/workflow-b-apply-example-project/: 05-update-project-files.md  index.md  run-notebook.md  run-python.md
docs/workflow-b-apply-example-project/01-start-and-run/: 01-start-in-github.md  02-configure-repo-settings.md  03-clone-repo-to-local.md  04-open-vscode-extensions-maybe-kafka.md  04-open-vscode-extensions.md  05-set-up-environment.md  06-run-project.md  index.md
docs/workflow-b-apply-example-project/02-change-authorship/: 02-update-authorship.md  03-run-project.md  04-git-add-commit-push.md  index.md
docs/workflow-b-apply-example-project/03-read-and-understand/: index.md
docs/workflow-b-apply-example-project/04-make-technical-modification/: 01-git-pull-before-changes.md  02-make-modification.md  04-git-add-commit-push.md  index.md
docs/workflow-b-apply-example-project/05-apply-skills/: 01-git-pull-before-changes.md  02-apply-skills.md  03-run-project.md  index.md
docs/workflow-c-start-new-project/: 01-start-in-github.md  02-configure-repo-settings.md  03-clone-repo-to-local.md  04-open-vscode-extensions-maybe-kafka.md  04-open-vscode-extensions.md  05-set-up-environment.md  06-verify.md  index.md
src/analytics_project/: README.md  main.py
src/pro_analytics_02/: README.md  __init__.py  demo_module_basics.py
tests/: test_smoke.py
