# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================
# Updated: 2026-06-04
# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.
# CUSTOM: Update identity and build tool src folders.

# ============================================================
# SECTION 1: PROJECT IDENTITY (name, version, CUSTOM dependencies)
# ============================================================

[project]
name = "pro-analytics-02" # CUSTOM: Update (distribution name; use lowercase + dashes).
readme = "README.md"
requires-python = ">=3.14"
version = "0.4.1"
description = "Professional Python for analytics."
license = "MIT"
authors = [
    { name = "Denise Case", email = "dcase@nwmissouri.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
keywords = ["python", "analytics", "data science", "professional development"]
dependencies = [
    # REQ.DEPS: External packages used by the project code.
    "datafun-toolkit",
    "ipykernel",
    "ipython",
    "pandas",
    "scikit-learn",
    "matplotlib"
]

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mkdocstrings[python]", # WHY: Auto-generate API docs from docstrings.
    "zensical", # WHY: Generate and maintain project documentation.
]

[project.urls]
Homepage = "https://github.com/denisecase/pro-analytics-02"
Repository = "https://github.com/denisecase/pro-analytics-02"
Documentation = "https://denisecase.github.io/pro-analytics-02/"
Issues = "https://github.com/denisecase/pro-analytics-02/issues"
Changelog = "https://github.com/denisecase/pro-analytics-02/blob/main/CHANGELOG.md"

# ============================================================
# SECTION 2: TOOL CONFIGURATION (Professional basics)
# ============================================================

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: Pyright configuration for static type checking.
# WHY: Strict type checking helps catch bugs early.
include = ["src"] # WHY: Include both source and test code for comprehensive type checking.
extraPaths = ["src"] # WHY: Ensure imports are resolved relative to src/ for consistent behavior across environments.
exclude = [ "**/node_modules", "**/.*", ".venv","**/__pycache__","dist","build"]
pythonVersion = "3.13" # 3.14 stubs incomplete in current pyright
reportMissingTypeStubs = "none" # WHY: Avoid warnings from third-party libraries without type stubs.
reportMissingImports = "warning" # WHY: Warn about missing imports to catch potential issues, but allow flexibility in notebooks and dynamic code.
reportPrivateUsage = "none" # WHY: Allow usage of private members (e.g., _version.py) without warnings, common in Python projects.
reportUntypedClassDecorator = "none"  # @dataclass stubs incomplete in current pyright
reportArgumentType = "none"           # len() resolves to collections.abc, pyright bug
typeCheckingMode = "basic" # strict | basic | off

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Consistent test discovery and coverage visibility.
minversion = "9.0"
testpaths = ["tests"]
addopts = "--cov=pro_analytics_02 --cov-report=term-missing --cov-fail-under=70"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Use one fast tool for Python linting and formatting across maintained repos.
# WHY: Keep generated, cached, virtualenv, build, and docs-site output out of lint scope.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]

# WHY: Match Black/Ruff formatter default; keeps diffs compact and predictable.
line-length = 88

# WHY: Avoid unstable preview behavior unless a repo intentionally opts in.
preview = false

# WHY: Match the current repo target; modernization rules should track the supported runtime.
target-version = "py314"

# WHY: Do not apply fixes Ruff marks unsafe in shared/release-oriented repos.
unsafe-fixes = false


[tool.ruff.format]
# WHY: Spaces are the Python standard and match formatter defaults.
indent-style = "space"

# WHY: Preserve platform-appropriate line endings across Windows/macOS/Linux contributors.
line-ending = "auto"

# WHY: Preserve existing quote style to minimize meaningless diff churn.
quote-style = "preserve"


[tool.ruff.lint]
# WHY: Professional baseline for research, package, and infrastructure code.
# WHY: Catch correctness issues, import disorder, modernization drift, bug patterns,
# WHY: path handling problems, avoidable complexity, weak return flow, doc gaps,
# WHY: and obvious security hazards.
select = [
    "E",   # WHY: Basic syntax and structural correctness.
    "F",   # WHY: Undefined names, unused imports, and likely real errors.
    "W",   # WHY: Warnings that catch easy issues early.
    "I",   # WHY: Deterministic import ordering for stable diffs.
    "UP",  # WHY: Modern Python constructs for the pinned Python version.
    "B",   # WHY: Common bug patterns.

    "PTH", # WHY: Prefer pathlib for cross-platform path handling.
    "C4",  # WHY: Comprehension correctness and clarity.
    "SIM", # WHY: Remove obvious unnecessary complexity.
    "RET", # WHY: Keep return behavior explicit and readable.

    "D",   # WHY: Public/reusable code needs docstrings.
    "S",   # WHY: Catch obvious security hazards before release or reuse.
]

ignore = [
    "E501", # WHY: Line length is handled by the formatter, not Ruff lint.
    "D203", # WHY: Conflicts with D211; use the no-blank-line convention.
    "D213", # WHY: Conflicts with D212; use first-line summary convention.
    "S101", # WHY: Allow assert for tests and intentional internal invariants.
]


[tool.ruff.lint.isort]
# WHY: Ordered imports keep reviews and generated diffs readable.
force-sort-within-sections = true


[tool.ruff.lint.per-file-ignores]
# WHY: Package __init__ files often re-export public API names.
"src/**/__init__.py" = ["F401"]

# WHY: Generated/version files are build metadata, not authored implementation.
"src/**/_version.py" = ["ALL"]

# WHY: Tests prioritize behavior clarity over public API documentation.
# WHY: B011/B018 may be acceptable in tests depending on the assertion pattern.
# WHY: S101 is retained here even though it is also globally ignored.
"tests/**/*.py" = ["D", "B018", "B011", "S101"]

# WHY: Marker files are intentionally empty/non-Python content.
"src/**/py.typed" = ["ALL"]


[tool.ruff.lint.pydocstyle]
# WHY: Google style is the project-wide docstring convention.
convention = "google"

# ============================================================
# SECTION 3: BUILD SYSTEM (boilerplate; CUSTOM src/ agreement)
# ============================================================
#
# REQ.PROJECT: A build system MUST be declared for package discovery and publishing.
# REQ.STRUCTURE: All importable code MUST live under src/.
# WHY src/ layout: Prevents accidental imports from the repo root;
#     ensures consistent behavior across IDEs, tests, CI, and PyPI.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
# CUSTOM: Must match src/ folders.
packages = ["src/pro_analytics_02"]  # REQ.PACKAGES: Discovery rooted at src/.
